add bio webpage with css

--- a/index_bio.html
+++ b/index_bio.html
@@ -1,17 +1,37 @@
 <!DOCTYPE html>
 <html>
+
 <head>
+    <!-- Title and link to css style sheet -->
     <meta charset="utf-8" />
     <title>Short Bio</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
+
 <body>
-    <h1>Student Bio</h1>
-    <h3>Hector Morales</h3>
-    <img src="https://res.cloudinary.com/teepublic/image/private/s--jWVfhVCA--/t_Preview/b_rgb:191919,c_limit,f_jpg,h_630,q_90,w_630/v1485856010/production/designs/1164104_1.jpg" alt="bender in his infancy" height="200" width="200">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <h3>Contact Info</h3>
-    <p><a href="#">Email</a></p>
-    <p><a href="#">Github</a></p>
-    <p><a href="#">Portfolio</a></p>
+    <!-- Header section -->
+    <header>
+        <h1>Bio - Hector Morales</h1>
+    </header>
+    <!-- Main container -->
+    <div class="container">
+        <!-- Bio section -->
+        <section id="main-bio">
+            <h2>Hector Morales</h2>
+            <img id="bio-image" src="https://placehold.it/200x200" alt="hector">
+            <p>Designated in-universe as Bending Unit 22, unit number 1,729, serial number 2716057.</p>
+        </section>
+        <!-- Contact section -->
+        <section id="contact-info">
+            <h2>Contact Infomation</h2>
+            <ul>
+                <li><strong>Email:</strong> <a href="#">bender.b.r@test.com</a></li>
+                <li><strong>Github:</strong> <a href="https://github.com/moralh2/second-class">https://github.com</a></li>
+                <li><strong>Portfolio:</strong> <a href="https://github.com/moralh2/second-class">github</a></li>
+            </ul>
+        </section>
+
+    </div>
+
 </body>
 </html>
